// This file is part of arduino-cli.
//
// Copyright 2020 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to
// modify or otherwise use the software for commercial activities involving the
// Arduino software without disclosing the source code of your own applications.
// To purchase a commercial license, send an email to license@arduino.cc.

syntax = "proto3";

package cc.arduino.cli.commands;

option go_package = "github.com/arduino/arduino-cli/rpc/commands";

message Instance {
	// The ID of the instance.
	int32 id = 1;
}

message DownloadProgress {
	// URL of the download.
	string url = 1;
	// The file being downloaded.
	string file = 2;
	// Total size of the file being downloaded.
	int64 total_size = 3;
	// Size of the downloaded portion of the file.
	int64 downloaded = 4;
	// Whether the download is complete.
	bool completed = 5;
}

message TaskProgress {
    // Description of the task.
    string name = 1;
    // Additional information about the task.
    string message = 2;
    // Whether the task is complete.
    bool completed = 3;
}

message Programmer {
	string platform = 1;
	string id = 2;
	string name = 3;
}

message Platform {
	// Platform ID (e.g., `arduino:avr`).
	string ID = 1;
	// Version of the platform.
	string Installed = 2;
	// Newest available version of the platform.
	string Latest = 3;
	// Name used to identify the platform to humans (e.g., "Arduino AVR Boards").
	string Name = 4;
	// Maintainer of the platform's package.
	string Maintainer = 5;
	// A URL provided by the author of the platform's package, intended to point
	// to their website.
	string Website = 6;
	// Email of the maintainer of the platform's package.
	string Email = 7;
	// List of boards provided by the platform. If the platform is installed,
	// this is the boards listed in the platform's boards.txt. If the platform is
	// not installed, this is an arbitrary list of board names provided by the
	// platform author for display and may not match boards.txt.
	repeated Board Boards = 8;
	// If true this Platform has been installed manually in the user' sketchbook
	// hardware folder
	bool ManuallyInstalled = 9;
}

message Board {
	// Name used to identify the board to humans.
	string name = 1;
	// Fully qualified board name used to identify the board to machines. The FQBN
	// is only available for installed boards.
	string fqbn = 2;
}